--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-
+/* CSS variables */
 :root {
     --primary-color: rgb(255, 92, 92);
     --primary-variant: #ff2d2d;
@@ -20,9 +20,11 @@
     --on-background-alt: rgba(255, 255, 255, 0.7);
     --background: #121212;
   }
+  /* Css Variables ends here */
   
   html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
   }
   
   body {
