--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     --on-background-alt: rgba(255, 255, 255, 0.7);
     --background: #121212;
   }
-  /* Css Variables ends here */
+  /* CSS Variables ends here */
   
   html {
     box-sizing: border-box;
@@ -189,7 +189,7 @@
   .theme-switch-wrapper {
     display: flex;
     align-items: center;
-    z-index: 100;
+    z-index: 1000;
     position: fixed;
     right: 25px;
     top: 30px;
@@ -207,44 +207,54 @@
     color: var(--on-background);
   }
   
-  .theme-switch {
-    display: inline-block;
-    height: 34px;
+  .switch {
     position: relative;
+    display: inline-block;
     width: 60px;
+    height: 34px;
   }
   
-  .theme-switch input {
-    display: none;
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
   }
   
   .slider {
-    background: #ccc;
-    bottom: 0;
-    cursor: pointer;
-    left: 0;
     position: absolute;
-    right: 0;
+    cursor: pointer;
     top: 0;
-    transition: 0.4s;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
   }
   
   .slider::before {
-    background: #fff;
-    bottom: 4px;
+    position: absolute;
     content: "";
     height: 26px;
-    left: 4px;
-    position: absolute;
-    transition: 0.4s;
     width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
   }
   
   input:checked + .slider {
     background: var(--primary-color);
   }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--primary-color);
+  }
   
   input:checked + .slider::before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
   
