--- a/style.css
+++ b/style.css
@@ -72,14 +72,15 @@
     margin-right: 25px;
     color: var(--primary-color);
     text-decoration: none;
-    border-bottom: 3px solid transparent;
+    /* border-bottom: 3px solid transparent; */
     font-weight: bold;
   }
   
   a:hover,
   a:focus {
     color: var(--on-background);
-    border-bottom: 3px solid;
+    /* border-bottom: 3px solid; */
+    text-decoration: none;
   }
   
   /* Home Section */
